Update validation and leave flow

--- a/src/assets/scss/leave.scss
+++ b/src/assets/scss/leave.scss
@@ -18,3 +18,16 @@
         margin-top: 5px;
     }
 }
+
+.table-cell {
+    padding: 10px !important;
+}
+
+.non-working-day-title {
+    border-radius: 6px;
+    background-color: #FBE9E7;
+    padding: 10px;
+    color: #C62828;
+    max-width: 137.6px;
+    font-weight: bold;
+}
