Fix color on focus in TextField, Select, AutoComplete and history layout

--- a/src/assets/scss/leave.scss
+++ b/src/assets/scss/leave.scss
@@ -31,3 +31,10 @@
     max-width: 137.6px;
     font-weight: bold;
 }
+
+.form-input {
+    height: 53px;
+}
+.css-if7jzm-MuiSvgIcon-root-MuiStepIcon-root.Mui-active {
+    color: #673AB7;
+}
