Fix design base on requirement

--- a/src/assets/scss/leave.scss
+++ b/src/assets/scss/leave.scss
@@ -29,6 +29,10 @@
     padding: 10px !important;
 }
 
+.table-cell-modal {
+    padding: 10px 10px 10px 20px !important;
+}
+
 .non-working-day-title {
     border-radius: 6px;
     background-color: #FBE9E7;
@@ -43,4 +47,9 @@
 }
 .css-if7jzm-MuiSvgIcon-root-MuiStepIcon-root.Mui-active {
     color: #673AB7;
+}
+
+.leave-detail {
+    font-size: 15px;
+    padding: 3px 0 3px 0;
 }
