--- a/src/assets/scss/asset.scss
+++ b/src/assets/scss/asset.scss
@@ -8,9 +8,12 @@
 .card {
     background-color: rgb(255, 255, 255);
     border-radius: 4px;
-    box-shadow: rgb(0 0 0 / 20%) 0px 2px 1px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
+    box-shadow: rgb(0 0 0 / 20%) 0px 2px 8px -1px, rgb(0 0 0 / 14%) 0px 1px 1px 0px, rgb(0 0 0 / 12%) 0px 1px 3px 0px;
     overflow: hidden;
     transition: all 0.2s ease-in 0s;
+    width: 99%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .css-cstir9-MuiButton-startIcon {
