Update design modal and history

--- a/src/assets/scss/leave.scss
+++ b/src/assets/scss/leave.scss
@@ -29,8 +29,9 @@
     padding: 10px !important;
 }
 
+
 .table-cell-modal {
-    padding: 10px 10px 10px 20px !important;
+    padding: 10px 15px !important;
 }
 
 .non-working-day-title {
