Update Leave Management screen and update validation for leave flow

--- a/src/assets/scss/leave.scss
+++ b/src/assets/scss/leave.scss
@@ -46,7 +46,8 @@
 .form-input {
     height: 53px;
 }
-.css-if7jzm-MuiSvgIcon-root-MuiStepIcon-root.Mui-active {
+
+.MuiStepIcon-root.Mui-active {
     color: #673AB7;
 }
 
