--- a/src/assets/scss/leave.scss
+++ b/src/assets/scss/leave.scss
@@ -71,3 +71,11 @@
 .MuiFormHelperText-root {
     color: #f44336 !important;
 }
+
+.MuiAutocomplete-popper {
+    background-color: rgb(255, 255, 255);
+    border-radius: 6px;
+    box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
